@@ -2,6 +2,7 @@
 - Include bash completion script in distribution (Github issue #29)
 - Allow re-adding closed session (Github issue #27 - thanks to Andrew Stevenson)
 - Allow sorting windows in natural order (Github issue #28 - thanks to Andrew Stevenson)
+- Fix links in metadata files to trackers (Github issue #41)
 
 4.03_06 2015-01-31 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Remove references to 'logmsg' preventing the history window from working (thanks to Andrew Stevenson)
